# snowball-email

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feat-bootstrap-apply.md  feat-drafts-reference-injection.md  feat-metrics-edit-capture.md  feature_request.md
approval/: tier_classifier.py
assets/: _mock_unread.json  classify.py  reference_store.py  run_round.py  send_backends.py
config/: schema.yaml
docs/: MANUAL.md
inboxes/bdtest/: config.yaml
inboxes/bdtest/reference/: principles.md
inboxes/bdtest/reference/patterns/: cold_outreach.md  follow_up.md  intro_request.md  partnership_proposal.md  pricing_inquiry.md
inboxes/clitest/: config.yaml
inboxes/smoketest/: config.yaml
inboxes/smoketest/reference/: links.md  principles.md
inboxes/smoketest/reference/patterns/: unknown_20260426t220550.md  unknown_20260426t233641.md
ingest/: _common.py  channeltalk.py  gmail.py  notion.py  web.py
metrics/: logger.py
snowball_email/: __init__.py  cli.py
templates/patterns/bd/: cold_outreach.md  follow_up.md  intro_request.md  partnership_proposal.md  pricing_inquiry.md
templates/patterns/cs/: bug_report.md  feature_request.md  refund_request.md  shipping_inquiry.md  technical_issue.md
templates/personas/: cs.md  partnerships.md  recruiting.md  sales.md
