[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowball-email"
version = "0.1.0"
description = "Compound-learning Gmail reply skill for Claude Code (gws CLI based, explicit-approval, local reference store)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "challengekim" }]
keywords = ["gmail", "claude-code", "skill", "email", "automation", "gws-cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]

[project.scripts]
snowball-email = "snowball_email.cli:main"

[project.urls]
Homepage = "https://github.com/challengekim/snowball-email"
Issues = "https://github.com/challengekim/snowball-email/issues"

[tool.setuptools.packages.find]
include = ["snowball_email"]
